syntax = "proto3";

package peer;

message GetPeersRequest {
    shared.Headers headers = 1;
}

message GetPeersResponse {
    message Peer {
        string ip = 1;
        uint32 port = 2;
    }

    repeated Peer peers = 1;
}

message GetCommonBlocksRequest {
    repeated string ids = 1;
    shared.Headers headers = 2;
}

message GetCommonBlocksResponse {
    message Common {
        uint32 height = 1;
        string id = 2;
    }

    Common common = 1;
}

message GetStatusRequest {
    shared.Headers headers = 1;
}

message GetStatusResponse {
    message State {
        message BlockHeader {
            string id = 1;
            uint32 version = 3;
            uint32 timestamp = 4;
            string previousBlock = 5;
            uint32 height = 7;
            uint32 numberOfTransactions = 8;
            string totalAmount = 9;
            string totalFee = 10;
            string reward = 11;
            uint32 payloadLength = 12;
            string payloadHash = 13;
            string generatorPublicKey = 14;
            string signature = 15;
        }
        uint32 height = 1;
        bool allowed = 2;
        uint32 currentSlot = 3;
        BlockHeader header = 4;
    }

    message Config {
        message Network {
            string name = 1;
            string nethash = 2;
            uint32 version = 5;
        }

        message Plugin {
            uint32 port = 1;
            bool enabled = 2;
        }

        string version = 1;
        Network network = 2;
        map<string, Plugin> plugins = 3;
    }

    State state = 1;
    Config config = 2;
    repeated string publicKeys = 3;
    repeated string signatures = 4;
}
